<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/pin_screen"
    tools:context=".pinscreen">


    <View
        android:id="@+id/pin_board"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/roundstyle"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/enter_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/etr_pin"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/n_pin_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/enter_pin"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="numberPassword"
        android:backgroundTint="@color/white"/>

    <LinearLayout
        android:id="@+id/btns_row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pin_board"
        android:layout_marginTop="60dp"
        android:gravity="center">

    <Button
        android:id="@+id/btn_1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_1"
        android:textSize="50sp"
        android:backgroundTint="@color/btns"/>

        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent"/>

    <Button
        android:id="@+id/btn_2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_2"
        android:textSize="50sp"
        android:backgroundTint="@color/btns"/>

        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent"/>

    <Button
        android:id="@+id/btn_3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_3"
        android:textSize="50sp"
        android:backgroundTint="@color/btns"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btns_row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btns_row1"
        android:layout_marginTop="30dp"
        android:gravity="center" >
    <Button
        android:id="@+id/btn_4"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btns"
        android:text="@string/btn_4"
        android:textSize="50sp" />

        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent"/>

    <Button
        android:id="@+id/btn_5"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_5"
        android:textSize="50sp"
        android:backgroundTint="@color/btns"/>

        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent"/>

    <Button
        android:id="@+id/btn_6"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_6"
        android:textSize="50sp"
        android:backgroundTint="@color/btns"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btns_row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btns_row2"
        android:layout_marginTop="30dp"
        android:gravity="center" >

    <Button
        android:id="@+id/btn_7"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btns"
        android:text="@string/btn_7"
        android:textSize="50sp" />

        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent"/>

    <Button
        android:id="@+id/btn_8"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_8"
        android:textSize="50sp"
        android:backgroundTint="@color/btns"/>

        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent"/>

    <Button
        android:id="@+id/btn_9"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_9"
        android:textSize="50sp"
        android:backgroundTint="@color/btns"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btns_row4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btns_row3"
        android:layout_marginTop="30dp"
        android:gravity="center" >

    <Button
        android:id="@+id/btn_0"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_0"
        android:textSize="50sp"
        android:backgroundTint="@color/btns"/>

    </LinearLayout>


</RelativeLayout>